Add a timer to make smoothing lag less noticeable

Finish the smoothed stroke when the user slows or stops drawing, smoothing only the quickly drawn parts.

BUG:251610